# simple-conversational-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  server.py
app/model/v1/: __init__.py  model.py
core/: config.py
core/exceptions/: __init__.py
core/model/: __init__.py  llm.py
notebooks/: LocalLLM.ipynb
