[tool.poetry]
name = "simple-conversational-app"
version = "0.1.0"
description = "Local LLM + web"
authors = ["Serhii <zagranlab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.0.21"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
langchain = "^0.1.8"
llama-cpp-python = "^0.2.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
